fixed a whole mess of warnings